--- a/style.css
+++ b/style.css
@@ -1,3 +1,90 @@
-body {
+
     
+body {
+    font-family: 'Open Sans' sans-serif;
+    margin: 0;
+
+}
+header .line {
+    height: 10px;
+    background-color: #117050;
+}
+.container {
+    max-width: 1140px;
+    margin: auto;
+}
+.header--area {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100px;
+}
+.header--left img {
+    width: 64px;
+    height: 64px;
+}
+.header--search form {
+    display: flex;
+}
+.header--search input {
+    font-size: 17px;
+    padding: 8px 13px;
+    border: 1px solid #111111;
+    outline: 0; 
+    width: 100%;
+    max-width: 250px; 
+}
+.header--search button {
+    border: 0;
+    background: transparent;
+    margin-left: -30px;
+    cursor: pointer;
+}
+.header--search button img {
+    width: 17px;
+    height: 17px;
+}
+.header--right {
+    display: flex;
+    align-items: center;
+}
+.header--menu {
+    margin-left: 70px;
+    cursor: pointer;
+}
+.header--menu img {
+    width: 24px;
+    height: 24px;
+}
+
+/*_________________________*/
+
+.banner {
+    background-image: url('assets/bg.jpg');
+    background-size: cover;
+    background-position: center;
+    padding-top: 90px;
+    padding-bottom: 100px;
+}
+.banner h1 {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
+    font-size: 90px;
+    line-height: 95px;
+    margin: 0;
+    padding-bottom: 40px;
+    padding-top: 90px;
+}
+.banner span {
+    font-size: 18px;
+}
+.banner--images {
+    margin-top: 70px;
+}
+.banner--images img {
+    width: 148px;
+    height: 148px;
+    border: 7px solid #117050;
+    border-radius: 50%;
+    margin-right: 40px;
 }
