--- a/style.css
+++ b/style.css
@@ -5,14 +5,48 @@ body {
     margin: 0;
 
 }
-header .line {
-    height: 10px;
-    background-color: #117050;
-}
+
 .container {
     max-width: 1140px;
     margin: auto;
 }
+
+/*_______________________*/
+
+.decorativeBar {
+    background-color: #006341;
+    height: 22px;
+    width: 168px;
+}
+.button {
+    display: inline-block;
+    border: 2px solid #454545;
+    padding: 10px 30px;
+    text-decoration: none;
+    color: #454545;
+    border-radius: 3px;
+}
+.button:hover {
+    background-color: #454545;
+    color: #FFF;
+}
+
+/*________________________*/
+
+header .line {
+    height: 10px;
+    background-color: #117050;
+}
+.area1 h2 {
+    font-size: 45px;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
+    line-height: 50px;
+    margin: 40px 0px;
+}
+
+/*________________________*/
+
 .header--area {
     display: flex;
     align-items: center;
@@ -88,3 +122,34 @@ header .line {
     border-radius: 50%;
     margin-right: 40px;
 }
+
+/*_________________________*/
+
+.area1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.area1--content {
+    padding: 90px;
+}
+.area1--quote {
+    margin-bottom: 30px;
+}
+.area1--text {
+    line-height: 25px;
+    margin-bottom: 50px;
+}
+.area1--image1 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    background-image: url('assets/f1.jpg');
+    background-position: center;
+    background-size: cover;
+}
+.area1--image2 {
+    height: 350px;
+    background-image: url('assets/f2.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
