--- a/style.css
+++ b/style.css
@@ -32,7 +32,15 @@ body {
 }
 
 /*________________________*/
-
+h1 {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
+    font-size: 90px;
+    line-height: 95px;
+    margin: 0;
+    padding-bottom: 40px;
+    padding-top: 90px;
+}
 header .line {
     height: 10px;
     background-color: #117050;
@@ -101,15 +109,7 @@ header .line {
     padding-top: 90px;
     padding-bottom: 100px;
 }
-.banner h1 {
-    font-family: 'Oswald', sans-serif;
-    font-weight: 700;
-    font-size: 90px;
-    line-height: 95px;
-    margin: 0;
-    padding-bottom: 40px;
-    padding-top: 90px;
-}
+
 .banner span {
     font-size: 18px;
 }
@@ -250,9 +250,74 @@ footer {
     height: 250px;
 }
 footer a {
-    color: aqua;
+    color: 	#54FF9F;
 }
 footer .credits {
     letter-spacing: 2px;
 }
 /*__________________________*/
+
+@media (min-width: 769px) and (max-width: 1140px) {
+    .container {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+@media (max-width: 769px) {
+    .container {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .area1, .area3 {
+        grid-template-columns: 3fr 2fr;
+    }
+    .area2 {
+        grid-template-columns: 2fr 3fr;
+    }
+}
+@media (max-width: 425px) {
+    .container {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .header--search input {
+        max-width: 100px;
+    }
+    h1 {
+        font-size: 50px;
+        line-height: 50px;
+    }
+    .banner--images img {
+        width: 70px;
+        height: 70px;
+        border: 4px solid #117050;
+        border-radius: 50%;
+        margin-right: 10px;
+    }
+    .area1,
+    .area2,
+    .area3,
+    .area4 {
+        grid-template-columns: 1fr;
+    }
+    .area1--content,
+    .area2--content,
+    .area3--content,
+    .area4--content {
+        padding: 40px;
+    } 
+    .area5 {
+        height: 200px;
+    }
+    .header--menu {
+        margin-left: 20px;
+        cursor: pointer;
+    }
+    footer {
+        height: 100px;
+    }
+    footer .director,
+    .credits {
+        font-size: 12px;
+    }
+}
